Fix: ダッシュボード最適化とHTTPS/Proxy設定の環境別制御
## 主な変更

### 1. ダッシュボード表示の最適化
- 未完了タスクのみ表示（完了済タブを削除）
- TaskListService: 未完了タスクのみ取得するように変更
- キャッシュキー更新: dashboard:user:{userId}:incomplete-tasks
- タブナビゲーション削除（header.blade.php）
- task-bento.blade.php簡素化
- tab-switch.js読み込み削除

### 2. HTTPS強制設定の環境別制御
- FORCE_HTTPS環境変数追加（ローカル: false、本番: true）
- AppServiceProvider.php: env('FORCE_HTTPS')で制御
- ローカル環境でHTTPを許可し、419エラーを解消

### 3. Proxy信頼設定の環境別制御
- TRUST_PROXIES環境変数追加（ローカル: false、本番: true）
- bootstrap/app.php: trustProxiesを条件付き適用
- ローカル環境でセッション/CSRF正常動作を保証

### 4. Alpine.js移行（継続中）
- task-card.blade.php
- search-results.blade.php
- pending-approvals.blade.php
- notifications/* (3ファイル)
- tokens/purchase.blade.php (TokenPurchaseTabs追加)

### パフォーマンス改善
- DBクエリ軽量化（完了済タスクを除外）
- 初期表示高速化
- キャッシュサイズ削減

### 影響範囲
- ダッシュボード表示
- タスク検索（完了済タスク確認用）
- ローカル開発環境の動作安定化

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,15 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+# HTTPS強制設定（本番環境: true、ローカル環境: false）
+# 本番環境ではALB経由でもHTTPSとして認識させるため必須
+FORCE_HTTPS=false
+
+# プロキシ信頼設定（本番環境: true、ローカル環境: false）
+# 本番環境ではALB/CloudFrontのX-Forwarded-*ヘッダーを信頼
+# ローカル環境でtrueにするとセッション/CSRFトークンが正常に動作しない
+TRUST_PROXIES=false
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
