feat: Stripe Webhook自動処理実装 + PHP intl拡張追加
## Webhook自動処理
- HandleStripeWebhookAction: 親クラスメソッド呼び出しでCashier自動同期有効化
  * handleCustomerSubscriptionCreated/Updated/Deleted で parent:: 呼び出し
  * handleCheckoutSessionCompleted 追加（ログ記録）
  * 返り値型を Symfony\Component\HttpFoundation\Response に修正

- SubscriptionEloquentRepository: subscription_data.metadata でmetadata伝搬修正
  * subscription_data.metadata パラメータ追加（重要: Subscription オブジェクトへの伝搬）
  * group_id, plan, subscription_plan, additional_members を含む

- SubscriptionWebhookService: Groupsテーブル更新処理の強化
  * ログ出力の詳細化（group_id, plan, stripe_subscription_id）

- bootstrap/app.php: stripe/* をCSRF検証から除外
  * validateCsrfTokens(except: ['stripe/*']) 追加

## PHP intl拡張追加
- docker/Dockerfile: libicu-dev, intl拡張を追加
  * Stripe SDK の多言語・通貨処理に必要

## UI改善
- select-plan.blade.php: サブスクリプション終了日の表示改善
  * 終了予定日を赤色で強調表示
  * 説明文追加（この日まで引き続きご利用いただけます）
  * 請求履歴の金額フォーマット修正

Related: Phase 1.1.1 Webhook自動処理
Tested: ローカル環境でsubscriptions/groupsテーブル自動更新確認済み

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -72,7 +72,9 @@ RUN apt-get update && apt-get install -y \
     lsb-release \
     wget \
     xdg-utils \
-    && docker-php-ext-install pdo pdo_pgsql pgsql mbstring exif pcntl bcmath gd zip \
+    libicu-dev \
+    && docker-php-ext-configure intl \
+    && docker-php-ext-install pdo pdo_pgsql pgsql mbstring exif pcntl bcmath gd zip intl \
     && fc-cache -fv \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
